--- a/과제3-회원가입 폼 작성하기/signupform.html
+++ b/과제3-회원가입 폼 작성하기/signupform.html
@@ -60,7 +60,7 @@
         .index, .intro, .interest {
             width : 135px;
             font-family : 돋움체;
-            background-image : url(media/arrow.png);
+            background-image : url(../media/arrow.png);
             background-repeat : no-repeat;
             background-position : 4px 7px;
             background-color : white;
